--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_script:
   - composer dumpautoload
 
 script:
-  - echo $env
+  - env
   - php -v
   - php -l tests/ServiceContainerTest.php
   - phpunit --bootstrap tests/bootstrap.php tests
